--- a/www/divs.css
+++ b/www/divs.css
@@ -2,19 +2,28 @@
   position: relative;
 }
 
-.a {
+.menu {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 40px;
   z-index: 100;
   background: #dfdfdf;
 }
 
-.b {
+.playerselect {
+  position: absolute;
+  top: 40px;
+  z-index: 100;
+  opacity: 0.8;
+  padding: 10px;
+  background: #ffff7f;
+}
+
+.content {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 90;
-  opacity: 0.5;
+  top: 40px;
   background: blue;
 }
