--- a/www/divs.css
+++ b/www/divs.css
@@ -12,10 +12,15 @@
 
 .playerselect {
   position: absolute;
-  top: 40px;
+  top: 45px;
+  left: 10px;
   z-index: 100;
   opacity: 0.8;
   padding: 10px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #ff7f7f;
+  border-radius: 20px;
   background: #ffff7f;
 }
 
