--- a/www/divs.css
+++ b/www/divs.css
@@ -1,34 +1,99 @@
+a {
+	font-weight: bold;
+}
+
+a:link {
+    text-decoration: none;
+	color: black;
+}
+
+a:visited {
+    text-decoration: none;
+	color: black;
+}
+
+a:hover {
+    text-decoration: none;
+	color: green;
+}
+
+a:active {
+    text-decoration: none;
+	color: green;
+}
+
+
 .parent {
   position: relative;
+  padding: 5px;
 }
 
 .menu {
   position: absolute;
-  width: 100%;
-  height: 40px;
+  padding: 3px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 10px;
   z-index: 100;
   background: #dfdfdf;
 }
 
 .playerselect {
   position: absolute;
-  top: 45px;
+  top: 55px;
   left: 10px;
   z-index: 100;
   opacity: 0.8;
-  padding: 10px;
+  padding: 25px;
   border-style: solid;
   border-width: 2px;
   border-color: #ff7f7f;
   border-radius: 20px;
   background: #ffff7f;
+  width: 360px;
+}
+
+.letterbutton {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  margin-left: 2px;
+  background: #efef6f;
+  border-color: #ff7f7f;
+}
+
+.playerselectinner {
+  z-index: 90;
+  overflow: auto;
+  width: 300px;
+  max-height: 380px;
+}
+
+.playerselectexit {
+  z-index:110;
+  position: absolute;
+  top: 0px;
+  left: 330px;
 }
 
 .content {
   position: absolute;
-  width: 100%;
   height: 100%;
+  width: 100%;
   z-index: 90;
-  top: 40px;
-  background: blue;
+  top: 45px;
+  width: 815px;
+  height: 615px;
+  border-style: solid;
+  border-width: 1px;
+  padding-left: 5px;
+  padding-top: 5px;
+  border-radius: 10px;
+}
+
+.selicon {
+  position: relative;
+  width: 15px;
+  height: 15px;
+  top: -3px;
 }
