--- a/www/divs.css
+++ b/www/divs.css
@@ -24,12 +24,10 @@ a:active {
 
 
 .parent {
-  position: relative;
   padding: 5px;
 }
 
 .menu {
-  position: absolute;
   padding: 3px;
   border-style: solid;
   border-width: 1px;
@@ -40,7 +38,7 @@ a:active {
 
 .playerselect {
   position: absolute;
-  top: 55px;
+  top: 60px;
   left: 10px;
   z-index: 100;
   opacity: 0.8;
@@ -54,6 +52,17 @@ a:active {
 }
 
 .letterbutton {
+  position: relative;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  margin-left: 2px;
+  top: 2px;
+  background: #efef6f;
+  border-color: #ff7f7f;
+}
+
+.letterbutton0 {
   border-style: solid;
   border-width: 1px;
   border-radius: 5px;
@@ -72,23 +81,18 @@ a:active {
 .playerselectexit {
   z-index:110;
   position: absolute;
-  top: 0px;
+  top: 2px;
   left: 330px;
 }
 
 .content {
-  position: absolute;
-  height: 100%;
-  width: 100%;
   z-index: 90;
-  top: 45px;
-  width: 815px;
-  height: 615px;
   border-style: solid;
   border-width: 1px;
-  padding-left: 5px;
-  padding-top: 5px;
+  padding-left: 6px;
+  padding-top: 6px;
   border-radius: 10px;
+  margin-top: 5px;
 }
 
 .selicon {
@@ -96,4 +100,13 @@ a:active {
   width: 15px;
   height: 15px;
   top: -3px;
+}
+
+.setting {
+  padding: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  border-color: #7f7fff;
+  margin-top: 5px;
 }
