--- a/www/divs.css
+++ b/www/divs.css
@@ -34,6 +34,7 @@ a:active {
   border-radius: 10px;
   z-index: 100;
   background: #dfdfdf;
+  height: 40px;
 }
 
 .playerselect {
@@ -86,6 +87,7 @@ a:active {
 }
 
 .content {
+  position: absolute;
   z-index: 90;
   border-style: solid;
   border-width: 1px;
@@ -93,6 +95,23 @@ a:active {
   padding-top: 6px;
   border-radius: 10px;
   margin-top: 5px;
+}
+
+.showlists {
+  border-style: solid;
+  border-width: 1px;
+  padding: 5px;
+  border-radius: 10px;
+  margin: 5px;
+}
+
+.listelement {
+  border-style: solid;
+  border-width: 1px;
+  padding: 1px;
+  margin: 1px;
+  border-radius: 5px;
+  width: 40px;
 }
 
 .selicon {
